--- a/04_livrable/website/punr/presentation.html
+++ b/04_livrable/website/punr/presentation.html
@@ -3,7 +3,7 @@
 <html xmlns:tei="http://www.tei-c.org/ns/1.0">
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <title>Pour un nouveau roman, accueil</title>
+      <title>Pour un nouveau roman, présentation de lœuvre</title>
       <link rel="stylesheet" type="text/css" href="punr_style.css">
       <link rel="icon" type="image/jpg" href="">
       <meta charset="utf-8">
@@ -46,22 +46,6 @@
       <nav class="articlenav">
          <ol id="articlenav"></ol>
       </nav>
-      <article>Édition critique et numérique à partir d'un encodage de Pour un nouveau roman publié
-         en 1963 par Alain Robbe-Grillet, produit par Adrien Mével en vu de produire une édition
-         numérique de cette œuvre dans le cadre d'un travail de recherche encadré par Mme&nbsp;Florence&nbsp;de&nbsp;Chalonge
-         et M.&nbsp;Matthieu&nbsp;Marchal, effectué en Master 2 Éditions Numériques et Imprimées de Textes
-         Littéraires, à l'Université de Lille, année universitaire 2022-2023.Le présent travail contient le texte de Pour un nouveau roman et quelques-uns de ses
-         référents transtextuels ainsi que des variantes issus des premières publications des
-         articles composant le recueil. Ce travail de recherche à l'ambition de replacer l'œuvre
-         dans son contexte et ses cotextes, questionnant l'objet éditorial lui-même (Pour un
-         nouveau roman est un reccueil d'articles précédemment publié dans divers journaux
-         et revues réunis) et ses liens et le représentation que cette œuvre véhiculede la
-         tradition et de son environnement critique et littéraire contemporain.Publication InformationEncodage des extraits cités dans Pour un nouveau roman.
-         Publication InformationEncodage de Pour un nouveau roman publié en 1963 par Alain Robbe-Grillet, produit
-         par Adrien Mével en vu de produire une édition numérique de cette œuvre dans le cadre
-         d'un travail de recherche encadré par Mme&nbsp;Florence&nbsp;de&nbsp;Chalonge et M.&nbsp;Matthieu&nbsp;Marchal,
-         effectué en Master 2 Éditions Numériques et Imprimées de Textes Littéraires, à l'Université
-         de Lille, année universitaire 2022-2023.</article>
       <footer><a href="https://www.univ-lille.fr/" target="blanck"><img src="img/logo_u_lille.png" alt="logo université de lille"></a></footer>
    </body>
 </html>
