--- a/04_livrable/website/punr/punr_ch03.html
+++ b/04_livrable/website/punr/punr_ch03.html
@@ -5,20 +5,20 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>Pour un nouveau roman, ch03</title>
       <link rel="stylesheet" type="text/css" href="punr_style.css">
-      <link rel="icon" type="image/jpg" href="">
-      <meta charset="utf-8">
+      <link rel="icon" type="image/jpg" href=""><script src="script.js"></script><meta charset="utf-8">
       <meta name="author" content="adrien mevel, mathieu marchal, florence de chalonge, alain robbe-grillet">
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
-      <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, franch theory"><script src="script.js"></script></head>
+      <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, french theory">
+   </head>
    <body onload="initialise()">
       <header id="top">
-         <h1>Pour un nouveau roman<br><span class="h1_subtitle">Édition critque et numérique</span></h1>
+         <h1><span class="STD_italic">Pour un nouveau roman</span><br><span class="h1_subtitle">Édition critque et numérique</span></h1>
          <div class="header_div">
             <nav class="nav_top">
                <ul>
                   <li><a href="home.html">Accueil</a></li>
                   <li><a href="presentation.html">Présentation de l'œuvre</a></li>
-                  <li style="width:200px; height:100px; padding-top:9px">Corpus
+                  <li style="width:200px; height:100px; padding-top:9px;flex-shrink: 0;">Corpus
                      					
                      <ol class="chapter_nav">
                         <li><a href="punr_ch01.html">À quoi servent les théories</a></li>
@@ -36,7 +36,7 @@
                         <li><a href="punr_ch13.html">Du réalisme à la réalité</a></li>
                      </ol>
                   </li>
-                  <li><a href="database.html">Illsutration de la base de données</a></li>
+                  <li><a href="database.html">Illustration de la base de données</a></li>
                   <li><a href="timeline.html">Chronologie</a></li>
                </ul>
             </nav>
@@ -44,13 +44,23 @@
          </div>
       </header>
       <div class="ch_nav"><a class="preceding" href="punr_ch02.html">&lt;</a><a class="following" href="punr_ch04.html">&gt;</a></div>
-      <nav class="articlenav">
-         <ol id="articlenav"></ol>
-      </nav>
       <div class="corpus">
+         <div class="articlenavs">
+            <h5>Au sein de cet article</h5>
+            <h6>Sous-sections</h6>
+            <ul id="articlenav">
+               <li><a href="#d1e454">Sur quelques notions périmées</a></li>
+               <ol>
+                  <li><a href="#d1e545">Le personnage</a></li>
+                  <li><a href="#d1e621">L’histoire</a></li>
+                  <li><a href="#d1e726">L’engagement</a></li>
+                  <li><a href="#d1e861">La forme et le contenu</a></li>
+               </ol>
+            </ul>
+         </div>
          <article>
-            <h3>Sur quelques notions périmées<br><span class="STDsmall">(1957)</span></h3>
-            <p>La critique traditionnelle a son vocabulaire. Bien qu’elle se défende beaucoup de
+            <h3 id="d1e454">Sur quelques notions périmées<br><span class="STDsmall">(1957)</span></h3>
+            <p class="first">La critique traditionnelle a son vocabulaire. Bien qu’elle se défende beaucoup de
                porter sur la littérature des jugements systématiques (prétendant, au contraire, aimer
                librement telle ou telle œuvre d’après des critères <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;naturels&nbsp;»</span>&nbsp;: le bon sens, le cœur, etc.), il suffit de lire avec un peu d’attention ses analyses
                pour voir aussitôt paraître un réseau de mots-clefs, trahissant bel et bien un système.</p>
@@ -76,7 +86,7 @@
                <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;avant-garde&nbsp;»</span>, <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;laboratoire&nbsp;»</span>, <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;anti-roman&nbsp;»</span>... c’est-à-dire&nbsp;: <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;fermons les yeux et revenons aux saines valeurs de la tradition française&nbsp;»</span>.</p>
             <div class="smallgap"></div>
             <div id="tit8" type="subsection">
-               <h4>Le personnage</h4>
+               <h4 id="d1e545">Le personnage</h4>
                <div class="smallgap"></div>
                <p>Nous en a-t-on assez parlé, du <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;personnage&nbsp;»</span>&nbsp;! Et ça ne semble, hélas, pas près de finir. Cinquante années de maladie, le constat
                   de son décès enregistré à maintes reprises par les plus sérieux essayistes, rien n’a
@@ -128,7 +138,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="tit9" type="subsection">
-               <h4>L’histoire</h4>
+               <h4 id="d1e621">L’histoire</h4>
                <div class="smallgap"></div>
                <p>Un roman, pour la plupart des amateurs&nbsp;–&nbsp;et des critiques&nbsp;–, c’est avant tout une
                   <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;histoire&nbsp;»</span>. Un vrai romancier, c’est celui qui sait <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;raconter une histoire&nbsp;»</span>. Le bonheur de conter, qui le porte d’un bout à l’autre de son ouvrage, s’identifie
@@ -224,7 +234,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="tit10" type="subsection">
-               <h4>L’engagement</h4>
+               <h4 id="d1e726">L’engagement</h4>
                <div class="smallgap"></div>
                <p>Puisque raconter pour distraire est futile et que raconter pour faire croire est devenu
                   suspect, le romancier pense apercevoir une autre voie&nbsp;: raconter pour enseigner. Las
@@ -373,7 +383,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="tit11" type="subsection">
-               <h4>La forme et le contenu</h4>
+               <h4 id="d1e861">La forme et le contenu</h4>
                <div class="smallgap"></div>
                <p>Une chose devrait troubler les partisans du réalisme socialiste, c’est la parfaite
                   ressemblance de leurs arguments, de leur vocabulaire, de leurs valeurs, avec ceux
@@ -486,8 +496,8 @@
             </div>
          </article>
          <section class="extract_section">
-            <p>Some text here.</p>
             <div id="pr_02_01" class="extractHide">
+               <div class="extract_close" onclick="closeExtract()">X</div>
                <p><span class="STDsmall STDgray">[10] </span>[...] Ces gens-là j'ai essayé de les aimer, ils ont <span class="STDsmall STDgray">[11] </span>parfois un air qui trompe mais bien vite si tu leur parle de toi ils t'injurient,
                   ton chagrin leur fait horreur.</p>
                <p>On m'a piqué avec une longue aiguille, c'est la vérité. Cette aiguille ellle m'est
@@ -498,6 +508,7 @@
                <p><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
             </div>
             <div id="pr_02_ToDefine" class="extractHide">
+               <div class="extract_close" onclick="closeExtract()">X</div>
                <p></p>
                <p><span class="STDsmall STDgray">[16] </span>[...] Je me demande souvent si les esprits brillants existeraient sans leur mémoire,
                   je n'ai aucune mémoire, je voudrais pour n'être pas ridicule vivre dans un mon d'où
@@ -510,8 +521,6 @@
                   où l'auditeur sans se poser aucune question participe à ton histoire.</p>
                <p><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
             </div>
-            <p>
-               Some text here.</p>
          </section>
       </div>
       <div class="ch_nav"><a class="preceding" href="punr_ch02.html">&lt;</a><a class="following" href="punr_ch04.html">&gt;</a></div>
