--- a/04_livrable/website/punr/punr_ch04.html
+++ b/04_livrable/website/punr/punr_ch04.html
@@ -5,20 +5,20 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>Pour un nouveau roman, ch04</title>
       <link rel="stylesheet" type="text/css" href="punr_style.css">
-      <link rel="icon" type="image/jpg" href="">
-      <meta charset="utf-8">
+      <link rel="icon" type="image/jpg" href=""><script src="script.js"></script><meta charset="utf-8">
       <meta name="author" content="adrien mevel, mathieu marchal, florence de chalonge, alain robbe-grillet">
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
-      <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, franch theory"><script src="script.js"></script></head>
+      <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, french theory">
+   </head>
    <body onload="initialise()">
       <header id="top">
-         <h1>Pour un nouveau roman<br><span class="h1_subtitle">Édition critque et numérique</span></h1>
+         <h1><span class="STD_italic">Pour un nouveau roman</span><br><span class="h1_subtitle">Édition critque et numérique</span></h1>
          <div class="header_div">
             <nav class="nav_top">
                <ul>
                   <li><a href="home.html">Accueil</a></li>
                   <li><a href="presentation.html">Présentation de l'œuvre</a></li>
-                  <li style="width:200px; height:100px; padding-top:9px">Corpus
+                  <li style="width:200px; height:100px; padding-top:9px;flex-shrink: 0;">Corpus
                      					
                      <ol class="chapter_nav">
                         <li><a href="punr_ch01.html">À quoi servent les théories</a></li>
@@ -36,7 +36,7 @@
                         <li><a href="punr_ch13.html">Du réalisme à la réalité</a></li>
                      </ol>
                   </li>
-                  <li><a href="database.html">Illsutration de la base de données</a></li>
+                  <li><a href="database.html">Illustration de la base de données</a></li>
                   <li><a href="timeline.html">Chronologie</a></li>
                </ul>
             </nav>
@@ -44,12 +44,12 @@
          </div>
       </header>
       <div class="ch_nav"><a class="preceding" href="punr_ch03.html">&lt;</a><a class="following" href="punr_ch05.html">&gt;</a></div>
-      <nav class="articlenav">
-         <ol id="articlenav"></ol>
-      </nav>
       <div class="corpus">
+         <div class="articlenavs">
+            <h5>Au sein de cet article</h5>
+         </div>
          <article>
-            <h3><span class="ref">Nature</span>, humanisme, tragédie<br><span class="STDsmall">(1958)</span></h3>
+            <h3 id="d1e995"><span class="ref">Nature</span>, humanisme, tragédie<br><span class="STDsmall">(1958)</span></h3>
             <div class="epigraph" onclick="displayExtract('toDefine')">
                <p>La tragédie n’est qu’un moyen de recueillir le malheur humain, de le subsumer, donc
                   de le justifier sous la forme d’une nécessité, d’une sagesse ou d’une purification&nbsp;:
@@ -58,7 +58,7 @@
                   nécessaire.</p>
                <p class="epigraph_ref"><span class="ref">Roland Barthes.</span></p>
             </div>
-            <p>Il y a deux ans déjà, essayant de définir la direction d’une recherche romanesque
+            <p class="first">Il y a deux ans déjà, essayant de définir la direction d’une recherche romanesque
                encore hésitante, j’admettais comme un point acquis <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;la destitution des vieux mythes de la profondeur&nbsp;»</span>. Les réactions très vives de la critique presque unanime, les objections de nombreux
                lecteurs apparemment de bonne foi, les réserves formulées par plusieurs amis sincères
                m’ont bien montré que c’était aller trop vite en besogne. Mis à part quelques esprits
@@ -535,8 +535,8 @@
                les objets comme refuge... Peut-être. Mais peut-être que non. Et, dans ce cas...</p>
          </article>
          <section class="extract_section">
-            <p>Some text here.</p>
             <div id="pr_02_01" class="extractHide">
+               <div class="extract_close" onclick="closeExtract()">X</div>
                <p><span class="STDsmall STDgray">[10] </span>[...] Ces gens-là j'ai essayé de les aimer, ils ont <span class="STDsmall STDgray">[11] </span>parfois un air qui trompe mais bien vite si tu leur parle de toi ils t'injurient,
                   ton chagrin leur fait horreur.</p>
                <p>On m'a piqué avec une longue aiguille, c'est la vérité. Cette aiguille ellle m'est
@@ -547,6 +547,7 @@
                <p><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
             </div>
             <div id="pr_02_ToDefine" class="extractHide">
+               <div class="extract_close" onclick="closeExtract()">X</div>
                <p></p>
                <p><span class="STDsmall STDgray">[16] </span>[...] Je me demande souvent si les esprits brillants existeraient sans leur mémoire,
                   je n'ai aucune mémoire, je voudrais pour n'être pas ridicule vivre dans un mon d'où
@@ -559,8 +560,6 @@
                   où l'auditeur sans se poser aucune question participe à ton histoire.</p>
                <p><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
             </div>
-            <p>
-               Some text here.</p>
          </section>
       </div>
       <div class="ch_nav"><a class="preceding" href="punr_ch03.html">&lt;</a><a class="following" href="punr_ch05.html">&gt;</a></div>
