--- a/04_livrable/website/punr/punr_ch10.html
+++ b/04_livrable/website/punr/punr_ch10.html
@@ -5,20 +5,20 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>Pour un nouveau roman, ch10</title>
       <link rel="stylesheet" type="text/css" href="punr_style.css">
-      <link rel="icon" type="image/jpg" href="">
-      <meta charset="utf-8">
+      <link rel="icon" type="image/jpg" href=""><script src="script.js"></script><meta charset="utf-8">
       <meta name="author" content="adrien mevel, mathieu marchal, florence de chalonge, alain robbe-grillet">
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
-      <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, franch theory"><script src="script.js"></script></head>
+      <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, french theory">
+   </head>
    <body onload="initialise()">
       <header id="top">
-         <h1>Pour un nouveau roman<br><span class="h1_subtitle">Édition critque et numérique</span></h1>
+         <h1><span class="STD_italic">Pour un nouveau roman</span><br><span class="h1_subtitle">Édition critque et numérique</span></h1>
          <div class="header_div">
             <nav class="nav_top">
                <ul>
                   <li><a href="home.html">Accueil</a></li>
                   <li><a href="presentation.html">Présentation de l'œuvre</a></li>
-                  <li style="width:200px; height:100px; padding-top:9px">Corpus
+                  <li style="width:200px; height:100px; padding-top:9px;flex-shrink: 0;">Corpus
                      					
                      <ol class="chapter_nav">
                         <li><a href="punr_ch01.html">À quoi servent les théories</a></li>
@@ -36,7 +36,7 @@
                         <li><a href="punr_ch13.html">Du réalisme à la réalité</a></li>
                      </ol>
                   </li>
-                  <li><a href="database.html">Illsutration de la base de données</a></li>
+                  <li><a href="database.html">Illustration de la base de données</a></li>
                   <li><a href="timeline.html">Chronologie</a></li>
                </ul>
             </nav>
@@ -44,13 +44,13 @@
          </div>
       </header>
       <div class="ch_nav"><a class="preceding" href="punr_ch09.html">&lt;</a><a class="following" href="punr_ch11.html">&gt;</a></div>
-      <nav class="articlenav">
-         <ol id="articlenav"></ol>
-      </nav>
       <div class="corpus">
+         <div class="articlenavs">
+            <h5>Au sein de cet article</h5>
+         </div>
          <article>
-            <h3>Un roman qui s’invente lui-même<br><span class="STDsmall">(1954)</span></h3>
-            <p><span class="quote" onclick="displayExtract('toDefine')">«&nbsp;J’y pense, j’y pense, un livre quelle prétention dans un sens, mais quelle extraordinaire
+            <h3 id="d1e3354">Un roman qui s’invente lui-même<br><span class="STDsmall">(1954)</span></h3>
+            <p class="first"><span class="quote" onclick="displayExtract('toDefine')">«&nbsp;J’y pense, j’y pense, un livre quelle prétention dans un sens, mais quelle extraordinaire
                   merveille s’il est raté dans les grandes largeurs.&nbsp;»</span> Ainsi <span class="ref">Robert&nbsp;Pinget</span> nous prévient de ses ambitions et cet écrivain honnête (l’espèce n’est pas si répandue),
                qui met tout son soin, depuis déjà quelques années, à <span class="STDitalic">rater</span> ses livres dans les grandes largeurs, est en train de passer à peu près inaperçu&nbsp;–&nbsp;même
                des spécialistes, noyés par profession dans le flot quotidien des récits linéaires,
@@ -76,7 +76,7 @@
                sur l’autre, se détruisant mutuellement ou se rassemblant en une synthèse inattendue.</p>
             <p>Il y a là le romancier Lattirail, mademoiselle Lorpailleur, également romancière,
                le postier Sinture qui détourne et truque la correspondance, Petite-Fiente, fillette
-               perverse qui <span class="STDitalic">fait des histoires,</span> Juan <span class="ref">Simon</span>, le patron de Mahu, le fils Pinson, Julia, etc. On ne sait pas trop déjà dans quelle mesure
+               perverse qui <span class="STDitalic">fait des histoires,</span> Juan Simon, le patron de Mahu, le fils Pinson, Julia, etc. On ne sait pas trop déjà dans quelle mesure
                certains d’entre eux n’ont pas été inventés par les autres. Que dire alors de la foule
                des comparses plus ou moins épisodiques, matérialisations des pensées de tel ou tel
                protagoniste, qui apparaissent et disparaissent, se transforment, se multiplient,
@@ -87,11 +87,12 @@
                drôlement tragique qui hantent cette contrée, entre Agapa et Fantoine, banlieue déraisonnable
                du réel&nbsp;? Mahu émerge d’abord péniblement de son sommeil et d’une série de quatorze
                frères du même âge&nbsp;; il pense qu’il lui faut trouver un bureau pour <span class="STDitalic">y aller,</span> comme les autres. Il emporte seulement la photo qui ornait le mur de sa chambre&nbsp;:
-               des figues –&nbsp;qui <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;font le vide&nbsp;»</span> en lui quand il les regarde. Il trouve cet employeur, Juan <span class="ref">Simon</span>, qui essaie de correspondre avec sa clientèle sans passer par le postier Sinture.
-               Petite-Fiente, la fille de Juan <span class="ref">Simon</span>, fait semblant d’avoir été giflée par Mahu... ou de ne pas avoir été giflée, on ne
-               sait pas... ou plutôt de l’avoir elle-même giflé... Le récit devient en quelques pages
-               d’une complication extraordinairement inconfortable, qu’il n’est malheureusement pas
-               possible d’analyser ici&nbsp;; aussi, lorsque interviennent ensuite les deux romanciers
+               des figues –&nbsp;qui <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;font le vide&nbsp;»</span> en lui quand il les regarde. Il trouve cet employeur, Juan Simon, qui essaie de correspondre
+               avec sa clientèle sans passer par le postier Sinture. Petite-Fiente, la fille de Juan
+               Simon, fait semblant d’avoir été giflée par Mahu... ou de ne pas avoir été giflée,
+               on ne sait pas... ou plutôt de l’avoir elle-même giflé... Le récit devient en quelques
+               pages d’une complication extraordinairement inconfortable, qu’il n’est malheureusement
+               pas possible d’analyser ici&nbsp;; aussi, lorsque interviennent ensuite les deux romanciers
                et le receveur des postes, qui tous les trois prétendent ouvertement <span class="STDitalic">écrire l’histoire,</span> celle-ci dépasse à l’instant avec allégresse les bornes de l’incompréhensible. En désespoir de cause,
                Mahu rentre chez soi, débarrassé enfin&nbsp;–&nbsp;croit-il&nbsp;–&nbsp;de tout ce fatras de <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;personnages mous&nbsp;»</span>. Les cent dernières pages du livre ne sont plus que du matériau à l’état brut, brefs
                morceaux de réalité décomposée qui se révèlent au moins aussi curieux que tout ce
@@ -129,8 +130,8 @@
                <span class="ref">Robert&nbsp;Pinget</span> a encore <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;gagné&nbsp;»</span>.</p>
          </article>
          <section class="extract_section">
-            <p>Some text here.</p>
             <div id="pr_02_01" class="extractHide">
+               <div class="extract_close" onclick="closeExtract()">X</div>
                <p><span class="STDsmall STDgray">[10] </span>[...] Ces gens-là j'ai essayé de les aimer, ils ont <span class="STDsmall STDgray">[11] </span>parfois un air qui trompe mais bien vite si tu leur parle de toi ils t'injurient,
                   ton chagrin leur fait horreur.</p>
                <p>On m'a piqué avec une longue aiguille, c'est la vérité. Cette aiguille ellle m'est
@@ -141,6 +142,7 @@
                <p><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
             </div>
             <div id="pr_02_ToDefine" class="extractHide">
+               <div class="extract_close" onclick="closeExtract()">X</div>
                <p></p>
                <p><span class="STDsmall STDgray">[16] </span>[...] Je me demande souvent si les esprits brillants existeraient sans leur mémoire,
                   je n'ai aucune mémoire, je voudrais pour n'être pas ridicule vivre dans un mon d'où
@@ -153,8 +155,6 @@
                   où l'auditeur sans se poser aucune question participe à ton histoire.</p>
                <p><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
             </div>
-            <p>
-               Some text here.</p>
          </section>
       </div>
       <div class="ch_nav"><a class="preceding" href="punr_ch09.html">&lt;</a><a class="following" href="punr_ch11.html">&gt;</a></div>
