--- a/04_livrable/website/punr/punr_ch11.html
+++ b/04_livrable/website/punr/punr_ch11.html
@@ -5,20 +5,20 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>Pour un nouveau roman, ch11</title>
       <link rel="stylesheet" type="text/css" href="punr_style.css">
-      <link rel="icon" type="image/jpg" href="">
-      <meta charset="utf-8">
+      <link rel="icon" type="image/jpg" href=""><script src="script.js"></script><meta charset="utf-8">
       <meta name="author" content="adrien mevel, mathieu marchal, florence de chalonge, alain robbe-grillet">
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
-      <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, franch theory"><script src="script.js"></script></head>
+      <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, french theory">
+   </head>
    <body onload="initialise()">
       <header id="top">
-         <h1>Pour un nouveau roman<br><span class="h1_subtitle">Édition critque et numérique</span></h1>
+         <h1><span class="STD_italic">Pour un nouveau roman</span><br><span class="h1_subtitle">Édition critque et numérique</span></h1>
          <div class="header_div">
             <nav class="nav_top">
                <ul>
                   <li><a href="home.html">Accueil</a></li>
                   <li><a href="presentation.html">Présentation de l'œuvre</a></li>
-                  <li style="width:200px; height:100px; padding-top:9px">Corpus
+                  <li style="width:200px; height:100px; padding-top:9px;flex-shrink: 0;">Corpus
                      					
                      <ol class="chapter_nav">
                         <li><a href="punr_ch01.html">À quoi servent les théories</a></li>
@@ -36,7 +36,7 @@
                         <li><a href="punr_ch13.html">Du réalisme à la réalité</a></li>
                      </ol>
                   </li>
-                  <li><a href="database.html">Illsutration de la base de données</a></li>
+                  <li><a href="database.html">Illustration de la base de données</a></li>
                   <li><a href="timeline.html">Chronologie</a></li>
                </ul>
             </nav>
@@ -44,13 +44,26 @@
          </div>
       </header>
       <div class="ch_nav"><a class="preceding" href="punr_ch10.html">&lt;</a><a class="following" href="punr_ch12.html">&gt;</a></div>
-      <nav class="articlenav">
-         <ol id="articlenav"></ol>
-      </nav>
       <div class="corpus">
+         <div class="articlenavs">
+            <h5>Au sein de cet article</h5>
+            <h6>Sous-sections</h6>
+            <ul id="articlenav">
+               <li><a href="#d1e3512">Nouveau roman, homme nouveau</a></li>
+               <ol>
+                  <li><a href="#d1e3533">Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</a></li>
+                  <li><a href="#d1e3569">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</a></li>
+                  <li><a href="#d1e3632">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</a></li>
+                  <li><a href="#d1e3656">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</a></li>
+                  <li><a href="#d1e3685">Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</a></li>
+                  <li><a href="#d1e3700">Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</a></li>
+                  <li><a href="#d1e3718">Le seul engagement possible, pour l’écrivain, c’est la littérature.</a></li>
+               </ol>
+            </ul>
+         </div>
          <article>
-            <h3>Nouveau roman, homme nouveau<br><span class="STDsmall">(1961)</span></h3>
-            <p>On a beaucoup écrit sur le <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;Nouveau Roman&nbsp;»</span> depuis quelques années. Malheureusement, parmi les critiques qu’on lui prodiguait,
+            <h3 id="d1e3512">Nouveau roman, homme nouveau<br><span class="STDsmall">(1961)</span></h3>
+            <p class="first">On a beaucoup écrit sur le <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;Nouveau Roman&nbsp;»</span> depuis quelques années. Malheureusement, parmi les critiques qu’on lui prodiguait,
                et aussi, souvent, parmi les éloges, il y avait tant de simplifications extrêmes,
                tant d’erreurs, tant de malentendus, qu’une sorte de mythe monstrueux a fini par se
                constituer, dans l’esprit du grand public, pour qui, semble-t-il, le Nouveau Roman
@@ -76,7 +89,7 @@
                qu’il serait plus raisonnable de dire&nbsp;:</p>
             <div class="smallgap"></div>
             <div id="" type="subsection">
-               <h4>Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</h4>
+               <h4 id="d1e3533">Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</h4>
                <div class="smallgap"></div>
                <p>Il n’a donc codifié aucune loi. Ce qui fait qu’il ne s’agit pas d’une école littéraire
                   au sens étroit du terme. Nous sommes les premiers à savoir qu’il y a entre nos œuvres
@@ -104,7 +117,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="" type="subsection">
-               <h4>Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</h4>
+               <h4 id="d1e3569">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</h4>
                <div class="smallgap"></div>
                <p>L’erreur est de croire que le <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;vrai roman&nbsp;»</span> s’est figé une fois pour toutes, à l’époque balzacienne, en des règles strictes et
                   définitives. Non seulement l’évolution a été considérable depuis le milieu du <span class="STDsc">xix</span><span class="STDexposant">e</span> siècle, mais elle a commencé tout de suite, à l’époque de <span class="ref">Balzac</span> lui-même. Celui-ci ne relève-t-il pas déjà de la <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;confusion&nbsp;»</span> dans les descriptions de <span class="STDitalic">La Chartreuse de Parme&nbsp;?</span> Il est certain que la bataille de Waterloo, telle que <span class="ref">Stendhal</span> nous la rapporte, n’appartient plus déjà à l’ordre balzacien.</p>
@@ -126,7 +139,7 @@
                   et des vieilles normes.</p>
             </div>
             <div id="" type="subsection">
-               <h4>Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</h4>
+               <h4 id="d1e3632">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</h4>
                <p>Comme il n’y avait pas, dans nos livres, de <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;personnages&nbsp;»</span> au sens traditionnel du mot, on en a conclu, un peu hâtivement, qu’on n’y rencontrait
                   pas d’hommes du tout. C’était bien mal les lire. L’homme y est présent à chaque page,
                   à chaque ligne, à chaque mot. Même si l’on y trouve beaucoup d’objets, et décrits
@@ -151,7 +164,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="" type="subsection">
-               <h4>Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</h4>
+               <h4 id="d1e3656">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</h4>
                <div class="smallgap"></div>
                <p>Comme il y avait beaucoup d’objets dans nos livres, et qu’on leur trouvait quelque
                   chose d’insolite, on a bien vite fait un sort au mot <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;objectivité&nbsp;»</span>, prononcé à leur sujet par certains critiques dans un sens pourtant très spécial&nbsp;:
@@ -174,7 +187,7 @@
                   idées toutes faites, en littérature comme dans la vie.</p>
             </div>
             <div id="" type="subsection">
-               <h4>Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</h4>
+               <h4 id="d1e3685">Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</h4>
                <div class="smallgap"></div>
                <p>Car il s’agit ici d’expérience vécue, et non des schémas rassurants&nbsp;–&nbsp;et désespérants
                   tout à la fois&nbsp;–&nbsp;qui tentent de limiter les dégâts et d’assigner un ordre conventionnel
@@ -195,7 +208,7 @@
                   de leur existence, les aideront à y voir plus clair.</p>
             </div>
             <div id="" type="subsection">
-               <h4>Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</h4>
+               <h4 id="d1e3700">Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</h4>
                <div class="smallgap"></div>
                <p>Et l’on arrive à la grande question&nbsp;: notre vie a-t-elle un sens&nbsp;? Quel est-il&nbsp;? Quelle
                   est la place de l’homme sur la terre&nbsp;? On voit tout de suite pourquoi les objets balzaciens
@@ -225,7 +238,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="" type="subsection">
-               <h4>Le seul engagement possible, pour l’écrivain, c’est la littérature.</h4>
+               <h4 id="d1e3718">Le seul engagement possible, pour l’écrivain, c’est la littérature.</h4>
                <div class="smallgap"></div>
                <p>Il n’est pas raisonnable, dès lors, de prétendre dans nos romans servir une cause
                   politique, même une cause qui nous paraît juste, même si dans notre vie politique
@@ -241,8 +254,8 @@
             </div>
          </article>
          <section class="extract_section">
-            <p>Some text here.</p>
             <div id="pr_02_01" class="extractHide">
+               <div class="extract_close" onclick="closeExtract()">X</div>
                <p><span class="STDsmall STDgray">[10] </span>[...] Ces gens-là j'ai essayé de les aimer, ils ont <span class="STDsmall STDgray">[11] </span>parfois un air qui trompe mais bien vite si tu leur parle de toi ils t'injurient,
                   ton chagrin leur fait horreur.</p>
                <p>On m'a piqué avec une longue aiguille, c'est la vérité. Cette aiguille ellle m'est
@@ -253,6 +266,7 @@
                <p><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
             </div>
             <div id="pr_02_ToDefine" class="extractHide">
+               <div class="extract_close" onclick="closeExtract()">X</div>
                <p></p>
                <p><span class="STDsmall STDgray">[16] </span>[...] Je me demande souvent si les esprits brillants existeraient sans leur mémoire,
                   je n'ai aucune mémoire, je voudrais pour n'être pas ridicule vivre dans un mon d'où
@@ -265,8 +279,6 @@
                   où l'auditeur sans se poser aucune question participe à ton histoire.</p>
                <p><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
             </div>
-            <p>
-               Some text here.</p>
          </section>
       </div>
       <div class="ch_nav"><a class="preceding" href="punr_ch10.html">&lt;</a><a class="following" href="punr_ch12.html">&gt;</a></div>
