--- a/04_livrable/website/punr/home.html
+++ b/04_livrable/website/punr/home.html
@@ -53,7 +53,7 @@
          dans son contexte et ses cotextes, questionnant l'objet éditorial lui-même (Pour un
          nouveau roman est un reccueil d'articles précédemment publié dans divers journaux
          et revues réunis) et ses liens et le représentation que cette œuvre véhiculede la
-         tradition et de son environnement critique et littéraire contemporain.Encodage des extraits cités dans Pour un nouveau roman.Encodage de Pour un nouveau roman publié en 1963 par Alain Robbe-Grillet, produit
+         tradition et de son environnement critique et littéraire contemporain..Encodage des extraits cités dans Pour un nouveau roman.Encodage des extraits cités dans Pour un nouveau roman.Encodage de Pour un nouveau roman publié en 1963 par Alain Robbe-Grillet, produit
          par Adrien Mével en vu de produire une édition numérique de cette œuvre dans le cadre
          d'un travail de recherche encadré par Mme&nbsp;Florence&nbsp;de&nbsp;Chalonge et M.&nbsp;Matthieu&nbsp;Marchal,
          effectué en Master 2 Éditions Numériques et Imprimées de Textes Littéraires, à l'Université
